[workspace]
resolver = "3"
members = [
    "crates/*",
]


[workspace.dependencies]
anyhow = { version = "1.0.102" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking"] }
serde = { version = "1.0.228", features = [ "derive"] }
thiserror = { version = "2.0.18"}

