[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = ["artifactory"]

[features]
default = ["async"]
sync = ["dep:multithread"]
async = ["dep:asynced"]

[dependencies]
asynced = { path = "../asynced", optional = true }
common = { path = "../common" }
error = { path = "../error" }
multithread = { path = "../multithread", optional = true }
tokio = { workspace = true }
