[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = ["artifactory"]

[features]
default = ["async"]
sync = ["dep:multithread"]
async = ["dep:asynced"]

[dependencies]
multithread = { path = "../multithread", optional = true }
asynced = { path = "../asynced", optional = true }
error = { path = "../error" }
tokio = { workspace = true }
